--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "4.13.3",
     "lodash": "3.10.1",
     "mime": "1.3.4",
+    "mongoose": "^4.2.6",
     "morgan": "1.6.1",
     "socket.io": "1.3.7",
     "swig": "1.4.2"
